# llm-cookbook

./: pyproject.toml
content/选修-Evaluating and Debugging Generative AI/: utilities.py  utilities_zh.py
content/选修-Finetuning Large Language Models/: utilities.py
utils/: chat_robot.py  image_demo.py
